[tool.poetry]
name = "meetup_stuff"
version = "0.1.0"
description = ""
authors = ["Sully Sullenberger <matthew.sullenberger@datarobot.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
