[tool.poetry]
name = "meetup_stuff"
version = "0.1.0"
description = ""
authors = ["Sully Sullenberger <matthew.sullenberger@datarobot.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
invoke = "^1.5.0"
rich = "^9.10.0"
pydantic = "^1.7.3"
questionary = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
